# SRE

./: README.md
automation/Taskfiles/: conf_ubuntu.yaml
cluster/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
cluster/terraform/modules/argocd/: providers.tf
cluster/terraform/modules/talosos/: main.tf  outputs.tf  providers.tf  variables.tf
tools/linters/: pyproject.toml
